<resources>
    <string name="app_name">KeeperRecord</string>
    <string name="email_hint">Enter Email</string>
    <string name="email">Email</string>
    <string name="password_hint">Enter Master Password</string>
    <string name="master_password">Master Password</string>
    <string name="content_description_bg">Background</string>
    <string name="login">Login</string>
    <string name="need_help">Need Help?</string>
    <string name="use_sso">Use Enterprise SSO Login</string>
    <string name="copyright"><font color='#888888'> \u00A9 2020 Keeper Security, Inc.</font></string>
    <string name="content_description_logo">logo</string>
    <string name="create_account"><font color='#FFFFFF'>Don\'t have an account? </font> <font color='#FFC700'>Create</font></string>
    <string name="email_not_valid">Please enter a valid email.</string>
    <string name="password_not_valid">Password has to be more than 6 characters.</string>
    <string name="loading">Loading…</string>
</resources>